# tdd-tasks

./: .flake8  .gitignore
.github/workflows/: api.yaml  destroy.yaml  infrastructure.yaml  ui.yaml
infrastructure/: cf_tasks.yaml
services/tasks_api/: .env.dev  create_dynamodb_locally.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  schemas.py  serverless.yaml  store.py  tests.py
services/tasks_api/docker/dynamodb/: shared-local-instance.db
services/tasks_api/resources/: cognito.yaml  dynamodb.yaml
services/tasks_ui/: package-lock.json  package.json  serverless.yaml  vite.config.js
services/tasks_ui/src/: App.vue  aws-exports.js  main.js
